--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -26,3 +26,9 @@
         - ruby
       dependencies:
         - role: asdf
+
+    - role: JavaScript
+      tags:
+        - javascript
+      dependencies:
+        - role: asdf
