adds yabai config

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -50,3 +50,11 @@
     - role: JavaScript
       tags:
         - javascript
+
+
+    # ====================
+    #   Desktop
+    # ====================
+    - role: yabai
+      tags:
+        - yabai
