adds starting support for macos settings

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -61,3 +61,11 @@
     - role: sketchybar
       tags:
         - sketchybar
+
+
+    # ====================
+    #   System
+    # ====================
+    - role: macos
+      tags:
+        - macos
