--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -1,5 +1,6 @@
-- { include: keyboard.yml,  tags: "keyboard" }
-- { include: dock.yml,  tags: "dock" }
-- { include: energy-saver.yml,  tags: "energy-saver" }
-- { include: hot-corners.yml,  tags: "hot-corners" }
-- { include: trackpad.yml,  tags: "trackpad" }
+# - { include: keyboard.yml,  tags: "keyboard" }
+# - { include: dock.yml,  tags: "dock" }
+# - { include: energy-saver.yml,  tags: "energy-saver" }
+# - { include: hot-corners.yml,  tags: "hot-corners" }
+# - { include: trackpad.yml,  tags: "trackpad" }
+- { include: desktop-screen-saver.yml,  tags: "desktop-screen-saver" }
