--- a/roles/macos/tasks/dock.yml
+++ b/roles/macos/tasks/dock.yml
@@ -41,9 +41,11 @@
       - { key: 'minimize-to-application',  type: 'boolean', value: '{{ Dock_MinimizeToApplication }}'}
       - { key: 'launchanim',               type: 'boolean', value: '{{ Dock_LaunchAnim }}'}
       - { key: 'autohide',                 type: 'bool',    value: '{{ Dock_Autohide }}'}
+      - { key: 'autohide-delay',           type: 'float',   value: '{{ Dock_AutohideDelay }}'}
       - { key: 'autohide-time-modifier',   type: 'float',   value: '{{ Dock_AutohideTimeModifier }}'}
       - { key: 'show-process-indicators',  type: 'boolean', value: '{{ Dock_ShowProcessIndicators }}'}
       - { key: 'showhidden',               type: 'boolean', value: '{{ Dock_ShowHidden }}'}
+      - { key: 'show-recents',             type: 'boolean', value: '{{ Dock_ShowRecents }}'}
       - { key: 'mouse-over-hilite-stack',  type: 'boolean', value: '{{ Dock_MouseOverHiliteStack }}'}
       - { key: 'mod-count',                type: 'int',     value: '1'}
       - { key: 'version',                  type: 'int',     value: '1'}
