adds missing finder setup

--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -1,6 +1,7 @@
 - { include: keyboard.yml,  tags: "keyboard" }
 - { include: screen.yml,  tags: "screen" }
 - { include: dock.yml,  tags: "dock" }
+- { include: finder.yml,  tags: "finder" }
 - { include: energy-saver.yml,  tags: "energy-saver" }
 - { include: hot-corners.yml,  tags: "hot-corners" }
 - { include: trackpad.yml,  tags: "trackpad" }
