--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -22,6 +22,9 @@
     - role: zsh
       tags:
         - zsh
+    - role: tmux
+      tags:
+        - tmux
     - role: neovim
       tags:
         - neovim
