adds some styles to tmux

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -29,27 +29,20 @@ set-option -g terminal-overrides 'xterm*:smcup@:rmcup@' # allow terminal scrolli
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# use vi mode
-# setw -g mode-keys vi
-# set -g status-keys vi
-
 
 # ====================
 #   Keymaps
 # ====================
-# vim style copy paste mode
-# unbind [
-# bind Escape copy-mode
-# unbind p
-# bind p paste-buffer
-# bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-# bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
 # splitting
+bind c new-window -c "#{pane_current_path}"
 unbind %
-bind h split-window -v
+bind h split-window -h -c "#{pane_current_path}"
+
 unbind '"'
-bind v split-window -h
+bind v split-window -c "#{pane_current_path}"
+
+bind-key -n S-Left previous-window
+bind-key -n S-Right next-window
 
 # navigate panes
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -98,18 +91,31 @@ bind t set status
 # ====================
 #   Styles
 # ====================
-# split lines
-set -g pane-border-style fg=brightblack
-set -g pane-active-border-style fg=brightblack
+set -g status-style bg=#1d2433
+set -Fg 'status-format[1]' '#{status-format[0]}'
+set -g 'status-format[0]' ''
+set -g status 3
+set -g pane-border-style fg=#2f3b54
+set -g pane-active-border-style fg=#2f3b54
 
-# statusline
-set -g status-bg black
-set -g status-fg white
 
-set -g status-right ""
-set -g status-left "#[bg=magenta]#[fg=black] #S "
 
-set -g window-status-separator ""
+# Status Left
+set -g status-left '  ⏺    '
+set -g status-left-style bg=#1d2433
+set -g status-left-style fg=#c3a6ff
 
-set -g window-status-current-format "#[fg=black]#[bg=green] #W "
-set -g window-status-format " #W "
+
+
+# Window List
+set -g window-status-format ' #W '
+set -g window-status-style 'fg=#6679a4 bg=#1d2433'
+setw -g window-status-current-format '#{?window_zoomed_flag,#[bg=#ffcc66],} #W '
+setw -g window-status-current-style fg=#ffcc66
+
+
+
+# Status Right
+set -g status-right-length 80
+CLOCK='#[fg=#8695b7]#(date +%I)#[fg=#2f3b54]:#[fg=#8695b7]#(date +%M) #(if [ `date +%p` = "AM" ]; then echo \#[fg=colour3]; else echo \#[fg=#8695b7]; fi)#(date +%p)'
+set -g status-right "$CLOCK  "
