--- a/roles/spotify/tasks/main.yml
+++ b/roles/spotify/tasks/main.yml
@@ -6,6 +6,9 @@
   homebrew:
     name: khanhas/tap/spicetify-cli
 
+- name: Create config folder if it doesn't already exist
+  shell: "mkdir -p {{ config }}/spicetify/Themes/"
+
 - name: Copy theme files
   file:
     src: "{{ dotfiles_home }}/roles/spotify/files/"
@@ -14,24 +17,24 @@
     force: yes
 
 # Configure Extensions
-- name: Keyboard Shortcuts
-  command: spicetify config extensions keyboardShortcut.js
-
-- name: Full App Display
-  command: spicetify config extensions fullAppDisplay.js
-
-- name: Bookmark
-  command: spicetify config extensions bookmark.js
-
-- name: Set Theme
-  command: spicetify config current_theme Halcyon
-
-- name: Ensure install is happening from a clean state
-  command: spicetify restore
-  ignore_errors: True
-
-- name: Delete old backup and return to default state
-  command: spicetify clear
-
-- name: Create a backup and apply config
-  command: spicetify backup apply
+#- name: Keyboard Shortcuts
+#  command: spicetify config extensions keyboardShortcut.js
+#
+#- name: Full App Display
+#  command: spicetify config extensions fullAppDisplay.js
+#
+#- name: Bookmark
+#  command: spicetify config extensions bookmark.js
+#
+#- name: Set Theme
+#  command: spicetify config current_theme Halcyon
+#
+#- name: Ensure install is happening from a clean state
+#  command: spicetify restore
+#  ignore_errors: True
+#
+#- name: Delete old backup and return to default state
+#  command: spicetify clear
+#
+#- name: Create a backup and apply config
+#  command: spicetify backup apply
