breaks up tmux so that sourcing it again only sources keymaps, not whole config

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -1,7 +1,10 @@
+source-file ~/.config/tmux/layout.conf
+source-file ~/.config/tmux/keymaps.conf
+
 # ====================
-#   Reload Config
+#   Reload keymap Config
 # ====================
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.keymaps.conf
 
 
 # ====================
@@ -28,94 +31,3 @@ set-option -g terminal-overrides 'xterm*:smcup@:rmcup@' # allow terminal scrolli
 # fix colors in nvim
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-
-# ====================
-#   Keymaps
-# ====================
-# splitting
-bind c new-window -c "#{pane_current_path}"
-unbind %
-bind h split-window -h -c "#{pane_current_path}"
-
-unbind '"'
-bind v split-window -c "#{pane_current_path}"
-
-bind-key -n S-Left previous-window
-bind-key -n S-Right next-window
-
-# navigate panes
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
-bind-key -n '˙' if-shell "$is_vim" 'send-keys ˙' 'select-pane -L'
-bind-key -n '∆' if-shell "$is_vim" 'send-keys ∆' 'select-pane -D'
-bind-key -n '˚' if-shell "$is_vim" 'send-keys ˚' 'select-pane -U'
-bind-key -n '¬' if-shell "$is_vim" 'send-keys ¬' 'select-pane -R'
-
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\\\'  'select-pane -l'"
-
-bind-key -n 'M-Space' if-shell "$is_vim" 'send-keys M-Space' 'select-pane -t:.+'
-
-bind-key -T copy-mode-vi 'M-h' select-pane -L
-bind-key -T copy-mode-vi 'M-j' select-pane -D
-bind-key -T copy-mode-vi 'M-k' select-pane -U
-bind-key -T copy-mode-vi 'M-l' select-pane -R
-bind-key -T copy-mode-vi 'M-\' select-pane -l
-bind-key -T copy-mode-vi 'M-Space' select-pane -t:.+
-
-# resize panes
-bind-key -n 'Ó' if-shell "$is_vim" 'send-keys Ó' 'resize-pane -L 2'
-bind-key -n 'Ô' if-shell "$is_vim" 'send-keys Ô' 'resize-pane -D 2'
-bind-key -n '' if-shell "$is_vim" 'send-keys ' 'resize-pane -U 2'
-bind-key -n 'Ò' if-shell "$is_vim" 'send-keys Ò' 'resize-pane -R 2'
-
-# zoom split
-unbind z
-bind z if-shell "$is_vim" "send-keys ,z" "resize-pane -Z"
-bind Z resize-pane -Z
-
-# vim style commands
-bind : command-prompt
-
-# other random key-binding changes
-bind x kill-pane
-bind t set status
-
-
-# ====================
-#   Styles
-# ====================
-set -g status-style bg=#1d2433
-set -Fg 'status-format[1]' '#{status-format[0]}'
-set -g 'status-format[0]' ''
-set -g status 3
-set -g pane-border-style fg=#2f3b54
-set -g pane-active-border-style fg=#2f3b54
-
-
-
-# Status Left
-set -g status-left '  ⏺    '
-set -g status-left-style bg=#1d2433
-set -g status-left-style fg=#c3a6ff
-
-
-
-# Window List
-set -g window-status-format ' #W '
-set -g window-status-style 'fg=#6679a4 bg=#1d2433'
-setw -g window-status-current-format '#{?window_zoomed_flag,#[bg=#ffcc66],} #W '
-setw -g window-status-current-style fg=#ffcc66
-
-
-
-# Status Right
-set -g status-right-length 80
-CLOCK='#[fg=#8695b7]#(date +%I)#[fg=#2f3b54]:#[fg=#8695b7]#(date +%M) #(if [ `date +%p` = "AM" ]; then echo \#[fg=colour3]; else echo \#[fg=#8695b7]; fi)#(date +%p)'
-set -g status-right "$CLOCK  "
