--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -24,6 +24,9 @@
   homebrew:
     name: gh
 
+- name: Install gh-dash extension
+  command: gh extension install dlvhdr/gh-dash
+
 - name: Create .bin directory
   command: "mkdir -p ~/.bin"
 
