adds keymap to tmux for moving panes

--- a/roles/tmux/files/tmux/keymaps.conf
+++ b/roles/tmux/files/tmux/keymaps.conf
@@ -9,6 +9,10 @@ bind v split-window -c "#{pane_current_path}"
 bind-key -n S-Left previous-window
 bind-key -n S-Right next-window
 
+# move pane between windows
+bind-key M command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key m command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
 # navigate panes - alt[h,j,k,l]
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
