another change to tmux configs

--- a/roles/tmux/files/tmuxinator/work.yml
+++ b/roles/tmux/files/tmuxinator/work.yml
@@ -60,4 +60,4 @@ windows:
   - nvim: nvim
   - zsh: ~
   - server: rails s
-  - webpack: bin/webpack-dev-server
+  - webpack: bin/webpacker-dev-server
