adds some things to work background session

--- a/roles/tmux/files/tmuxinator/background.yml
+++ b/roles/tmux/files/tmuxinator/background.yml
@@ -50,4 +50,6 @@ windows:
       root: ~/reforge/
       panes:
         - docker-compose exec web bundle exec sidekiq -C config/sidekiq.yml
+  - redis-server: redis-server
+  - localstripe: localstripe
 
