runs postgres inside reforge repo - to make use of tool-versions

--- a/roles/tmux/files/tmuxinator/background.yml
+++ b/roles/tmux/files/tmuxinator/background.yml
@@ -45,7 +45,10 @@ root: ~/
 # attach: false
 
 windows:
-  - postgres: postgres
+  - postgres:
+      root: ~/reforge/
+      panes:
+        - postgres
   - sidekiq:
       root: ~/reforge/
       panes:
