refactor(keybinds): migrate tmux navigation to ctrl-based bindings
- Switch from alt+hjkl to ctrl+hjkl for pane navigation
- Add ctrl+shift+hjkl for pane resizing
- Fix tmux config reload path
- Update ghostty config to prevent key conflicts
- Add ghostty role to dotfiles playbook

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -42,6 +42,9 @@
     - role: kitty
       tags:
         - kitty
+    - role: ghostty
+      tags:
+        - ghostty
     - role: spotify
       tags:
         - spotify
