--- a/roles/tmux/files/tmux/keymaps.conf
+++ b/roles/tmux/files/tmux/keymaps.conf
@@ -13,14 +13,20 @@ bind-key -n S-Right next-window
 bind-key M command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key m command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
-# navigate panes - alt[h,j,k,l]
+# navigate panes - ctrl[h,j,k,l]
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-bind-key -n '˙' if-shell "$is_vim" 'send-keys ˙' 'select-pane -L'
-bind-key -n '∆' if-shell "$is_vim" 'send-keys ∆' 'select-pane -D'
-bind-key -n '˚' if-shell "$is_vim" 'send-keys ˚' 'select-pane -U'
-bind-key -n '¬' if-shell "$is_vim" 'send-keys ¬' 'select-pane -R'
+bind -n C-h if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind -n C-j if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind -n C-k if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind -n C-l if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
+# resize panes - ctrl[h,j,k,l]
+bind -n C-S-h if-shell "$is_vim" 'send-keys C-S-h' 'resize-pane -L 5'
+bind -n C-S-j if-shell "$is_vim" 'send-keys C-S-j' 'resize-pane -D 5'
+bind -n C-S-k if-shell "$is_vim" 'send-keys C-S-k' 'resize-pane -U 5'
+bind -n C-S-l if-shell "$is_vim" 'send-keys C-S-l' 'resize-pane -R 5'
 
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
@@ -38,11 +44,6 @@ bind-key -T copy-mode-vi 'M-l' select-pane -R
 bind-key -T copy-mode-vi 'M-\' select-pane -l
 bind-key -T copy-mode-vi 'M-Space' select-pane -t:.+
 
-# resize panes - alt[left,down,up,right]
-bind-key -n 'Ó' if-shell "$is_vim" 'send-keys Ó' 'resize-pane -L 2'
-bind-key -n 'Ô' if-shell "$is_vim" 'send-keys Ô' 'resize-pane -D 2'
-bind-key -n '' if-shell "$is_vim" 'send-keys ' 'resize-pane -U 2'
-bind-key -n 'Ò' if-shell "$is_vim" 'send-keys Ò' 'resize-pane -R 2'
 
 # zoom split
 unbind z
