--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -4,7 +4,7 @@ source-file ~/.config/tmux/keymaps.conf
 # ====================
 #   Reload keymap Config
 # ====================
-bind r source-file ~/.keymaps.conf
+bind r source-file ~/.config/tmux/keymaps.conf
 
 
 # ====================
