config(ghostty): set background opacity to 1.0
Align configuration values and add explicit background opacity setting

--- a/roles/ghostty/files/config
+++ b/roles/ghostty/files/config
@@ -1,6 +1,7 @@
-font-family        = Hack Nerd Font Mono
-adjust-cell-height = 30%
-theme              = halcyon
+font-family         = Hack Nerd Font Mono
+adjust-cell-height  = 30%
+theme               = halcyon
+background-opacity = 1.0
 
 # keybindings
 keybind = opt+h=unbind
