feat(aerospace): add window manager configuration
- Add Aerospace role to dotfiles playbook
- Configure window manager settings and keybindings
- Set up automated installation and config management

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -36,6 +36,9 @@
     # ====================
     #   Apps
     # ====================
+    - role: aerospace
+      tags:
+        - aerospace
     - role: browsers
       tags:
         - browsers
