--- a/roles/tmux/files/tmuxinator/work.yml
+++ b/roles/tmux/files/tmuxinator/work.yml
@@ -1,7 +1,7 @@
 # /Users/hogan.mcdonald/.config/tmuxinator/work.yml
 
 name: work
-root: ~/reforge
+root: ~/reforge-copilot
 
 # Optional tmux socket
 # socket_name: foo
@@ -59,5 +59,4 @@ root: ~/reforge
 windows:
   - nvim: nvim
   - zsh: ~
-  - server: rails s
-  - webpack: bin/webpacker-dev-server
+  - server: pnpm dev
