feat(browsers): add Arc Browser and enable Firefox Developer Edition
- Add installation of Arc Browser via Homebrew
- Uncomment and enable Firefox Developer Edition installation

--- a/roles/browsers/tasks/main.yml
+++ b/roles/browsers/tasks/main.yml
@@ -2,10 +2,14 @@
   homebrew_cask:
     name: brave-browser
 
-# - name: Firefox Developer Edition - dependencies
-#   homebrew_tap:
-#     name: homebrew/cask-versions
+- name: Arc Browser
+  homebrew_cask:
+    name: arc
 
-# - name: Firefox Developer Edition
-#   homebrew_cask:
-#     name: firefox-developer-edition
+- name: Firefox Developer Edition - dependencies
+  homebrew_tap:
+    name: homebrew/cask-versions
+
+- name: Firefox Developer Edition
+  homebrew_cask:
+    name: firefox-developer-edition
