feat(roles): add mcp-hub role with npm global installation
- Add mcp-hub to the dotfiles playbook
- Create tasks to install via npm and link configuration
- Add default config for git MCP server
- Remove unnecessary neovim config backup in neovim role

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -28,6 +28,9 @@
     - role: pgcli
       tags:
         - pgcli
+    - role: mcp-hub
+      tags:
+        - mcp-hub
     - role: neovim
       tags:
         - neovim
