--- a/roles/mcp-hub/files/config.json
+++ b/roles/mcp-hub/files/config.json
@@ -1,8 +1,3 @@
 {
-  "mcpServers": {
-    "github.com/modelcontextprotocol/servers/tree/main/src/git": {
-      "command": "python",
-      "args": ["-m", "mcp_server_git"]
-    }
-  }
+  "mcpServers": {}
 }
