--- a/roles/mcp-hub/tasks/main.yml
+++ b/roles/mcp-hub/tasks/main.yml
@@ -3,9 +3,13 @@
     name: mcp-hub
     global: yes
 
-- name: Copy mcp-hub configuration file
-  file:
-    src: "{{ dotfiles_home }}/roles/mcp-hub/files"
+- name: Check if mcp-hub config directory exists
+  stat:
+    path: "{{ config }}/mcp-hub"
+  register: mcp_hub_dir
+
+- name: Copy mcp-hub configuration files
+  copy:
+    src: "{{ dotfiles_home }}/roles/mcp-hub/files/"
     dest: "{{ config }}/mcp-hub"
-    state: link
-    force: yes
+  when: not mcp_hub_dir.stat.exists
