--- a/roles/aerospace/files/aerospace.toml
+++ b/roles/aerospace/files/aerospace.toml
@@ -133,48 +133,55 @@ outer.right =      20
 # end tell'
 # '''
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#focus
+### --- Focus Between Panes (Directional) ---
 cmd-h = 'focus left'
 cmd-j = 'focus down'
 cmd-k = 'focus up'
 cmd-l = 'focus right'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#move
+### --- Move Windows (Directional) ---
 cmd-shift-h = 'move left'
 cmd-shift-j = 'move down'
 cmd-shift-k = 'move up'
 cmd-shift-l = 'move right'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-cmd-1 = 'workspace 1'
-cmd-2 = 'workspace 2'
-cmd-3 = 'workspace 3'
-cmd-4 = 'workspace 4'
-
-cmd-shift-f = 'fullscreen'
-cmd-shift-space = 'layout floating tiling'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#resize
-cmd-shift-minus = 'resize smart -50'
-cmd-shift-equal = 'resize smart +50'
+### --- Resize Windows ---
 alt-shift-h = 'resize width -60'
 alt-shift-j = 'resize height -60'
 alt-shift-k = 'resize height +60'
 alt-shift-l = 'resize width +60'
 
+# Smart resize (horizontal only)
+cmd-shift-minus = 'resize smart -50'
+cmd-shift-equal = 'resize smart +50'
+
+### --- Join with Neighboring Window (Merge) ---
 cmd-ctrl-h = 'join-with left'
 cmd-ctrl-j = 'join-with up'
 cmd-ctrl-k = 'join-with down'
 cmd-ctrl-l = 'join-with right'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#layout
+### --- Layouts ---
 alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
+cmd-shift-space = 'layout floating tiling'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
+### --- Fullscreen ---
+cmd-shift-f = 'fullscreen'
+
+### --- Workspace Switching ---
+cmd-1 = 'workspace 1'
+cmd-2 = 'workspace 2'
+cmd-3 = 'workspace 3'
+cmd-4 = 'workspace 4'
+ctrl-h = 'workspace prev'
+ctrl-l = 'workspace next'
+ctrl-j = 'workspace prev'
+ctrl-k = 'workspace next'
+alt-tab = 'workspace-back-and-forth'
+
+### --- Move Window to Workspace (and follow) ---
 cmd-alt-1 = 'move-node-to-workspace 1 --focus-follows-window'
 cmd-alt-2 = 'move-node-to-workspace 2 --focus-follows-window'
 cmd-alt-3 = 'move-node-to-workspace 3 --focus-follows-window'
 cmd-alt-4 = 'move-node-to-workspace 4 --focus-follows-window'
-
-alt-tab = 'workspace-back-and-forth'
