--- a/roles/tmux/files/tmux/keymaps.conf
+++ b/roles/tmux/files/tmux/keymaps.conf
@@ -13,21 +13,23 @@ bind-key -n S-Right next-window
 bind-key M command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key m command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
-# navigate panes - ctrl[h,j,k,l]
+# shared is_vim check
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-bind -n C-h if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
-bind -n C-j if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
-bind -n C-k if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
-bind -n C-l if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+### --- Navigation with Alt-h/j/k/l ---
+bind -n M-h if-shell "$is_vim" 'send-keys M-h' 'select-pane -L'
+bind -n M-j if-shell "$is_vim" 'send-keys M-j' 'select-pane -D'
+bind -n M-k if-shell "$is_vim" 'send-keys M-k' 'select-pane -U'
+bind -n M-l if-shell "$is_vim" 'send-keys M-l' 'select-pane -R'
 
-# resize panes - ctrl[h,j,k,l]
-bind -n C-S-h if-shell "$is_vim" 'send-keys C-S-h' 'resize-pane -L 5'
-bind -n C-S-j if-shell "$is_vim" 'send-keys C-S-j' 'resize-pane -D 5'
-bind -n C-S-k if-shell "$is_vim" 'send-keys C-S-k' 'resize-pane -U 5'
-bind -n C-S-l if-shell "$is_vim" 'send-keys C-S-l' 'resize-pane -R 5'
+# --- Resize with Alt-Cmd-H/J/K/L ---
+bind -n M-C-h if-shell "$is_vim" 'send-keys M-C-h' 'resize-pane -L 5'
+bind -n M-C-j if-shell "$is_vim" 'send-keys M-C-j' 'resize-pane -D 5'
+bind -n M-C-k if-shell "$is_vim" 'send-keys M-C-k' 'resize-pane -U 5'
+bind -n M-C-l if-shell "$is_vim" 'send-keys M-C-l' 'resize-pane -R 5'
 
+### --- Additional keys for navigation ---
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
@@ -37,13 +39,13 @@ if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
 
 bind-key -n 'M-Space' if-shell "$is_vim" 'send-keys M-Space' 'select-pane -t:.+'
 
+# copy-mode navigation
 bind-key -T copy-mode-vi 'M-h' select-pane -L
 bind-key -T copy-mode-vi 'M-j' select-pane -D
 bind-key -T copy-mode-vi 'M-k' select-pane -U
 bind-key -T copy-mode-vi 'M-l' select-pane -R
 bind-key -T copy-mode-vi 'M-\' select-pane -l
 bind-key -T copy-mode-vi 'M-Space' select-pane -t:.+
-
 
 # zoom split
 unbind z
