--- a/roles/tmux/files/tmux/keymaps.conf
+++ b/roles/tmux/files/tmux/keymaps.conf
@@ -23,11 +23,11 @@ bind -n M-j if-shell "$is_vim" 'send-keys M-j' 'select-pane -D'
 bind -n M-k if-shell "$is_vim" 'send-keys M-k' 'select-pane -U'
 bind -n M-l if-shell "$is_vim" 'send-keys M-l' 'select-pane -R'
 
-# --- Resize with Alt-Cmd-H/J/K/L ---
-bind -n M-C-h if-shell "$is_vim" 'send-keys M-C-h' 'resize-pane -L 5'
-bind -n M-C-j if-shell "$is_vim" 'send-keys M-C-j' 'resize-pane -D 5'
-bind -n M-C-k if-shell "$is_vim" 'send-keys M-C-k' 'resize-pane -U 5'
-bind -n M-C-l if-shell "$is_vim" 'send-keys M-C-l' 'resize-pane -R 5'
+# --- Resize with Ctrl+Alt+h/j/k/l ---
+bind -n C-M-h if-shell "$is_vim" 'send-keys C-M-h' 'resize-pane -L 5'
+bind -n C-M-j if-shell "$is_vim" 'send-keys C-M-j' 'resize-pane -D 5'
+bind -n C-M-k if-shell "$is_vim" 'send-keys C-M-k' 'resize-pane -U 5'
+bind -n C-M-l if-shell "$is_vim" 'send-keys C-M-l' 'resize-pane -R 5'
 
 ### --- Additional keys for navigation ---
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
