--- a/roles/ghostty/files/config
+++ b/roles/ghostty/files/config
@@ -1,7 +1,12 @@
-font-family         = Hack Nerd Font Mono
-adjust-cell-height  = 30%
 theme               = halcyon
-background-opacity = 1.0
+background-opacity  = 1.0
+
+# Dyslexia‑friendly font & spacing for Ghostty
+font-family         = "JetBrains Mono Nerd Font"
+font-size           = 12
+font-feature        = "calt,liga,dlig"
+adjust-cell-width   = 11%
+adjust-cell-height  = 35%
 
 # keybindings
 keybind = opt+h=unbind
