feat(javascript): add global installation of @antfu/ni package
fix(neovim): correct mason-lspconfig setup method
chore(deps): update plugin versions in lazy-lock.json

--- a/roles/javascript/tasks/main.yml
+++ b/roles/javascript/tasks/main.yml
@@ -19,3 +19,8 @@
   npm:
     name: nodemon
     global: yes
+
+- name: Install "ni" node.js package globally
+  npm:
+    name: "@antfu/ni"
+    global: yes
