feat: add Raycast role to dotfiles
- Add Raycast to main dotfiles playbook
- Create Raycast role with Homebrew dependency
- Implement tasks to install Raycast via Homebrew
- Configure system to disable Spotlight keyboard shortcut
- Add user notification for required manual setup steps

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -51,6 +51,9 @@
     - role: ghostty
       tags:
         - ghostty
+    - role: raycast
+      tags:
+        - raycast
     - role: spotify
       tags:
         - spotify
