feat(dotfiles): replace raycast with alfred and remove unused apps
Replace Raycast with Alfred as the primary launcher application. Remove
several unused applications from the configuration:
- Spotify
- Yabai window manager
- Sizzy configuration file

The sketchybar configuration has been updated to no longer depend on
Yabai.

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -51,12 +51,9 @@
     - role: ghostty
       tags:
         - ghostty
-    - role: raycast
+    - role: alfred
       tags:
-        - raycast
-    - role: spotify
-      tags:
-        - spotify
+        - alfred
 
 
     # ====================
@@ -73,9 +70,6 @@
     # ====================
     #   Desktop
     # ====================
-    - role: yabai
-      tags:
-        - yabai
     - role: sketchybar
       tags:
         - sketchybar
