feat(ghostty): enable background blur with reduced opacity
Add background-blur setting and reduce background-opacity from 1.0 to 0.8 for a
more translucent terminal appearance.

Also update Neovim dependencies:
- Add catppuccin theme
- Remove halcyon-neovim theme

--- a/roles/ghostty/files/config
+++ b/roles/ghostty/files/config
@@ -1,5 +1,6 @@
 theme               = halcyon
-background-opacity  = 1.0
+background-opacity  = 0.8
+background-blur     = true
 
 # Dyslexia‑friendly font & spacing for Ghostty
 font-family         = "JetBrains Mono Nerd Font"
