--- a/roles/ghostty/files/config
+++ b/roles/ghostty/files/config
@@ -2,6 +2,10 @@ theme               = halcyon
 background-opacity  = 0.8
 background-blur     = true
 
+macos-titlebar-style = hidden
+mouse-hide-while-typing = true
+window-save-state = always
+
 # Dyslexia‑friendly font & spacing for Ghostty
 font-family         = "JetBrains Mono Nerd Font"
 font-size           = 12
