feat: add mycli role and MySQL connection utilities
- Add mycli role with configuration files
- Add mycli to CLI tools list
- Create myconnect script for managing MySQL connections
- Install pm2 node.js package globally
- Add ngrok to CLI tools

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -28,6 +28,9 @@
     - role: pgcli
       tags:
         - pgcli
+    - role: mycli
+      tags:
+        - mycli
     - role: mcp-hub
       tags:
         - mcp-hub
