feat(karabiner): add Karabiner Elements configuration
- Add Karabiner Elements to dotfiles playbook
- Create role for installing and configuring Karabiner
- Configure Caps Lock as Escape when pressed alone and Hyper key when held
- Set up standard function key mappings

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -78,6 +78,9 @@
     # ====================
     #   System
     # ====================
+    - role: karabiner
+      tags:
+        - karabiner
     - role: macos
       tags:
         - macos
